--- a/Woof.Net.csproj
+++ b/Woof.Net.csproj
@@ -7,12 +7,12 @@
     <Copyright>(c)2018 by CodeDog Ltd.</Copyright>
     <PackageLicenseUrl>https://en.wikipedia.org/wiki/MIT_License</PackageLicenseUrl>
     <PackageProjectUrl>https://github.com/HTD/Woof.Net</PackageProjectUrl>
-    <PackageReleaseNotes>Fixed exception handling</PackageReleaseNotes>
+    <PackageReleaseNotes>JSON serializer now uses camelCase by default.</PackageReleaseNotes>
     <PackageTags>webservice http net core</PackageTags>
     <Product>Woof.Net</Product>
     <PackageId>Woof.Net</PackageId>
     <GeneratePackageOnBuild>False</GeneratePackageOnBuild>
-    <Version>1.0.1</Version>
+    <Version>1.0.2</Version>
     <PackageRequireLicenseAcceptance>False</PackageRequireLicenseAcceptance>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
